--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "react-intersection-observer": "^10.0.0",
     "react-resizable-panels": "^3.0.6",
     "react-router": "^7.10.0",
+    "react-router-dom": "^7.11.0",
     "recharts": "^3.5.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
